# what-runs-all-day-but-has-no-legs

./: CMakeLists.txt  main.cpp
src/: mock_time.hpp  timer.cpp  timer.hpp
test/: timer_test.cpp
